<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_view_item_search"
            android:icon="@drawable/ic_baseline_search_24"
            android:title="@string/search_for_words" />
        <item
            android:id="@+id/nav_view_item_favourites"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favourite_words"/>
        <item
            android:id="@+id/nav_view_item_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings"/>
        <item
            android:id="@+id/nav_view_item_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about"/>
    </group>
</menu>